Better social login configuration.

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -33,16 +33,16 @@
                         {{ 'Login'|trans }} <i class="fas fa-arrow-right ml-1"></i>
                     </button>
                 </div>
-                {% if facebook_enabled or google_enabled %}
+                {% if login_with_facebook or login_with_google %}
                     <hr>
                     <p class="text-muted">{{ 'You may also use any of the below services to quickly login:'|trans }}</p>
                     <div class="btn-toolbar">
-                        {% if facebook_enabled %}
+                        {% if login_with_facebook %}
                             <a class="btn btn-facebook btn-sm" href="{{ url('connect_facebook') }}" role="button">
                                 <i class="fab fa-facebook-f mr-1"></i> {{ 'Facebook'|trans }}
                             </a>
                         {% endif %}
-                        {% if google_enabled %}
+                        {% if login_with_google %}
                             <a class="btn btn-google btn-sm ml-1" href="{{ url('connect_google') }}" role="button">
                                 <i class="fab fa-google mr-1"></i> {{ 'Google'|trans }}
                             </a>
